# qna-agent

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  config.py  database.py  llm.py  main.py  rag.py  routes.py  schemas.py
knowledge/: company.txt  products.txt  support.txt
tests/: conftest.py  test_api.py
